[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player/CameraController.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/Inventory UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/Hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Player/Gun Hook.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Characters/Hitbox.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Player/InteractCheck.gd" type="Script" id=7]
[ext_resource path="res://Scenes/UI/Pause menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Player/Inventory.gd" type="Script" id=9]
[ext_resource path="res://Envs/Night_Env.tres" type="Environment" id=10]
[ext_resource path="res://Assets/Models/hollow_dome.obj" type="ArrayMesh" id=12]
[ext_resource path="res://Materials/Shaders/in_water.gdshader" type="Shader" id=13]

[sub_resource type="SphereShape" id=5]

[sub_resource type="SphereShape" id=23]
radius = 1.57942

[sub_resource type="Animation" id=7]
resource_name = "Aim"
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("Gun Hook:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.19807, -0.097159, 0.0780277, 0.097159, -0.0780277, 0, -0.0780095, -0.040335, 0.0780095, 0.040335 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Gun Hook:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.804665, -0.12217, -0.0273575, 0.12217, 0.0273575, -0.349, -0.0808954, -0.0224441, 0.0808954, 0.0224441 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Gun Hook:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.655, -0.121208, -0.0076369, 0.121208, 0.0076369, -0.874, -0.0885912, -0.0442795, 0.0885912, 0.0442795 ),
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Animation" id=11]
resource_name = "Aim Reverse"
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("Gun Hook:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.0780095, -0.040335, 0.0780095, 0.040335, 1.19807, -0.097159, 0.0780277, 0.097159, -0.0780277 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Gun Hook:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.349, -0.0808954, -0.0224441, 0.0808954, 0.0224441, -0.804665, -0.12217, -0.0273575, 0.12217, 0.0273575 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Gun Hook:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -0.874, -0.0885912, -0.0442795, 0.0885912, 0.0442795, -1.655, -0.121208, -0.0076369, 0.121208, 0.0076369 ),
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Animation" id=9]
resource_name = "Hide"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Gun Hook:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.19807, -0.25, 0, 0.25, 0, 1.19807, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Gun Hook:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.804665, -0.25, 0, 0.25, 0, -0.804665, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Gun Hook:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.655, -0.0634901, -0.122945, 0.0634901, 0.122945, 0.345, -0.0433336, -0.0412607, 0.0433336, 0.0412607 ),
"times": PoolRealArray( 0, 0.1 )
}

[sub_resource type="Animation" id=12]
resource_name = "Hide Reverse"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Gun Hook:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.19807, -0.25, 0, 0.25, 0, 1.19807, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Gun Hook:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.804665, -0.25, 0, 0.25, 0, -0.804665, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Gun Hook:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.345, -0.0433336, -0.0412607, 0.0433336, 0.0412607, -1.655, -0.0634901, -0.122945, 0.0634901, 0.122945 ),
"times": PoolRealArray( 0, 0.1 )
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Gun Hook:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.19807, -0.804665, -1.655 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Gun Hook:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.19807, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Gun Hook:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.804665, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Gun Hook:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1.655, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gun Hook:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.19807, -0.804665, -1.655 ) ]
}

[sub_resource type="ShaderMaterial" id=28]
shader = ExtResource( 13 )
shader_param/tint = Color( 0.0509804, 0.0745098, 0.184314, 1 )
shader_param/clarity = 0.624

[sub_resource type="GDScript" id=25]
script/source = "extends MeshInstance

func _ready() -> void:
	Globals.connect_to_player_set(self, \"_on_player_set\")

func _on_player_set(pl: Player):
	pl.connect(\"env_changed\", self, \"_on_env_changed\")
	visible = (pl.environment == Player.ENVIRONMENT.WATER)
	
func _on_env_changed(env):
	if env == Player.ENVIRONMENT.WATER:
		visible = true
	else:
		visible = false
"

[sub_resource type="RayShape" id=6]
length = 5.0

[sub_resource type="RayShape" id=27]
length = 50.0

[sub_resource type="GDScript" id=26]
script/source = "extends RayCast

signal picked_up(obj)
signal released(obj, was_launched)

export(float, 1.0, 8.0, .1) var hold_distance = 2.0
export(float, 1.0, 40.0, .5) var throw_strength = 25.0

var held_obj : Prop = null

var mouse_moved := false
var last_mouse_motion_time = -1

func _ready() -> void:
	Globals.connect(\"unpaused\", self, \"on_unpaused\")
	
func on_unpaused():
	if held_obj:
		release()

func _input(event: InputEvent) -> void:
	if event is InputEventMouseMotion:
		last_mouse_motion_time = Time.get_ticks_msec()
	
	if Input.is_action_just_pressed(\"throw\"):
		if held_obj:
			release(true)
	elif Input.is_action_just_released(\"grab_drop\"):
		Console.write_line(\"grab_drop released\")
		if held_obj:
			release()
	elif Input.is_action_just_pressed(\"grab_drop\"):
		var coll = get_collider() as Prop
		
		if coll and coll.grab_enabled and not held_obj:
			held_obj = coll
			held_obj.picked_up(self, hold_distance)
			emit_signal(\"picked_up\", held_obj)

func release(launch = false):
	if launch:
		held_obj.launched(throw_strength)
	else:
		var now = Time.get_ticks_msec()
		held_obj.dropped((now - last_mouse_motion_time) < 10)
	
	emit_signal(\"released\", held_obj, launch)
	
	held_obj = null

func on_entered_slot():
	emit_signal(\"released\", held_obj, false)
	held_obj = null
"

[sub_resource type="Animation" id=13]
resource_name = "Crouch"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.41822, 0 ), Vector3( 0, 0.4, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.41822, 0 ) ]
}

[sub_resource type="CylinderShape" id=4]

[sub_resource type="SphereMesh" id=15]
radius = 0.2
height = 0.4

[sub_resource type="CylinderShape" id=3]

[sub_resource type="GDScript" id=19]
script/source = "extends RayCast

#there should be a way of computing this from a 'lethal height'
export(float) var min_dmg_speed := 10.0
export(float) var lethal_speed := 80.0

var debug_ignore_dmg := false
var old_pos := Vector3.ZERO
var v_speed := 0.0
var is_falling := true

func _ready() -> void:
	reset()

func reset():
	v_speed = 0
	is_falling = false

func _process(delta: float) -> void:
	if enabled:
		if not is_colliding():
			var new_pos : Vector3 = Utils.get_global_pos(Globals.player)
			if not is_falling:
				is_falling = true
				old_pos = new_pos
			else:
				var v_dist = (new_pos - old_pos).y
				
				if abs(v_dist) > 0.0:
					v_speed = min(abs(v_dist / delta), lethal_speed)
					old_pos = new_pos
				
		elif is_falling and not debug_ignore_dmg:
			var dmg := get_damage()
			Globals.player.hitbox.decrease_hp(dmg)
			reset()
	else:
		reset()

func get_damage() -> float:
	var max_dmg = Globals.player.hitbox_start_hp
	
	var other : CollisionObject = get_collider() as CollisionObject
	if (other and Globals.get_layer_bit_in_object(other, \"Water\")):
		max_dmg = 0.0

	var dmg := range_lerp(v_speed, min_dmg_speed, lethal_speed, 0, max_dmg)
	dmg = clamp(dmg, 0, max_dmg)
	
	return round(dmg)
"

[sub_resource type="GDScript" id=18]
script/source = "extends Spatial

var enabled: bool = true setget set_enabled
var flipped: bool = false

onready var check_top = $\"StairsCheck Top\"
onready var check_mid = $StairsCheck
onready var check_bottom = $\"StairsCheck Bottom\"

func set_enabled(value):
	enabled = value
	check_top.enabled = enabled
	check_mid.enabled = enabled
	check_bottom.enabled = enabled
	if not(enabled):
		flipped = false

func any_collisions() -> bool:
	return check_top.is_colliding() or check_mid.is_colliding() or check_bottom.is_colliding()
	
func top_collision() -> bool:
	return check_top.is_colliding() if not(flipped) else check_bottom.is_colliding()
	
func bottom_collision() -> bool:
	return check_bottom.is_colliding() if not(flipped) else check_top.is_colliding()
	return check_bottom.is_colliding() if not(flipped) else check_top.is_colliding()
"

[sub_resource type="CapsuleShape" id=16]
radius = 1.09907
height = 3.06992

[sub_resource type="SphereShape" id=17]
radius = 20.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
h_speed = 12.5
crouch_anim_mult = 3.0
zoom_fov = 20.0

[node name="Head" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 1.41822, 0 )
shape = SubResource( 5 )

[node name="RoofCheck" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0.925081, -9.85961e-15 )
enabled = true
cast_to = Vector3( 0, 1, 0 )
collision_mask = 4
collide_with_areas = true
debug_shape_thickness = 4

[node name="Env Check" type="Area" parent="Head"]
collision_mask = 1024

[node name="CollisionShape" type="CollisionShape" parent="Head/Env Check"]
shape = SubResource( 23 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.823641 )
cull_mask = 1048573
fov = 65.0
far = 8192.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Head/Camera"]

[node name="Hud" parent="Head/Camera" instance=ExtResource( 4 )]

[node name="ViewportContainer" type="ViewportContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="Head/Camera/ViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 4096

[node name="Gun Camera" type="Camera" parent="Head/Camera/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 1.41822, -0.823641 )
cull_mask = 2
environment = ExtResource( 10 )

[node name="Gun Hook" type="Spatial" parent="Head/Camera/ViewportContainer/Viewport/Gun Camera"]
transform = Transform( -4.37114e-09, -4.37114e-09, 0.1, -6.2172e-16, 0.1, 4.37114e-09, -0.1, -4.30651e-16, -4.37114e-09, 1.19807, -0.804665, -1.655 )
script = ExtResource( 5 )
anim_player_node = NodePath("../AnimationPlayer")
weapons_scenes = PoolStringArray( "res://Scenes/Weapons/Arm.tscn", "res://Scenes/Weapons/Gun/Gun.tscn", "res://Scenes/Weapons/Rifle/Rifle.tscn", "res://Scenes/Weapons/Laser.tscn", "res://Scenes/Weapons/Gauss Shotgun/GaussShotg.tscn" )

[node name="Position3D" type="Position3D" parent="Head/Camera/ViewportContainer/Viewport/Gun Camera/Gun Hook"]
transform = Transform( 4, -5.0822e-21, 5.68434e-14, 5.0822e-21, 4, 5.68434e-14, -5.68434e-14, -5.68434e-14, 4, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera/ViewportContainer/Viewport/Gun Camera"]
autoplay = "Idle"
anims/Aim = SubResource( 7 )
"anims/Aim Reverse" = SubResource( 11 )
anims/Hide = SubResource( 9 )
"anims/Hide Reverse" = SubResource( 12 )
anims/Idle = SubResource( 10 )
anims/RESET = SubResource( 8 )

[node name="Water Effect 3D" type="MeshInstance" parent="Head/Camera"]
transform = Transform( 1.92118, 0, 0, 0, -2.78484e-08, 1.92118, 0, -0.637098, -8.39776e-08, 0, 0, -0.878278 )
cast_shadow = 0
mesh = ExtResource( 12 )
material/0 = SubResource( 28 )
script = SubResource( 25 )

[node name="InteractRay" type="Area" parent="Head"]
transform = Transform( -1, -1.60933e-21, 1.50996e-07, 0, 1, 1.06581e-14, -1.50996e-07, 1.06581e-14, -1, 0, 0, -0.823641 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Head/InteractRay"]
shape = SubResource( 6 )

[node name="LookRay" type="Area" parent="Head"]
transform = Transform( -1, -9.31761e-22, -8.74228e-08, 9.31761e-22, 1, -2.13162e-14, 8.74228e-08, -2.13162e-14, -1, 0, 0, -0.823641 )

[node name="CollisionShape" type="CollisionShape" parent="Head/LookRay"]
shape = SubResource( 27 )

[node name="AimRay" type="RayCast" parent="Head"]
transform = Transform( -1, -1.50996e-07, -6.60024e-15, 0, -4.37114e-08, 1, -1.50996e-07, 1, 4.37114e-08, 0, 0, -0.823641 )
enabled = true
cast_to = Vector3( 0, -30, 0 )
collision_mask = 932
collide_with_areas = true
debug_shape_custom_color = Color( 1, 0, 0, 1 )

[node name="PropRay" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.823641 )
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 2048
script = SubResource( 26 )
hold_distance = 3.0

[node name="Flashlight" type="SpotLight" parent="Head"]
visible = false
layers = 3
light_energy = 7.629
light_cull_mask = 4294967293
shadow_enabled = true
spot_range = 44.5694
spot_angle = 18.7661
spot_angle_attenuation = 0.153893

[node name="Light test target" type="CSGBox" parent="Head/Flashlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40.3212 )
visible = false
width = 36.0
height = 42.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head"]
autoplay = "RESET"
reset_on_save = false
anims/Crouch = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.453955, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Body"]
visible = false
portal_mode = 2
cast_shadow = 0
mesh = SubResource( 15 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 3 )

[node name="GroundCheck" type="RayCast" parent="Foot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
collision_mask = 804
collide_with_areas = true
debug_shape_thickness = 5
script = SubResource( 19 )

[node name="StairsChecks" type="Spatial" parent="."]
script = SubResource( 18 )

[node name="StairsCheck Top" type="RayCast" parent="StairsChecks"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, -1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2

[node name="StairsCheck" type="RayCast" parent="StairsChecks"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2

[node name="StairsCheck Bottom" type="RayCast" parent="StairsChecks"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1, -1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2

[node name="Hitbox" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
collision_layer = 128
collision_mask = 112
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 16 )

[node name="OthersDetection" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
collision_layer = 128
collision_mask = 800

[node name="CollisionShape" type="CollisionShape" parent="OthersDetection"]
shape = SubResource( 17 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 9 )

[node name="UI" type="Node" parent="."]

[node name="Inventory UI" parent="UI" instance=ExtResource( 3 )]
visible = false

[node name="Pause menu" parent="UI" instance=ExtResource( 8 )]
visible = false

[connection signal="area_entered" from="Head/Env Check" to="." method="_on_entered_env"]
[connection signal="area_exited" from="Head/Env Check" to="." method="_on_exited_env"]
[connection signal="animation_finished" from="Head/Camera/ViewportContainer/Viewport/Gun Camera/AnimationPlayer" to="Head/Camera/ViewportContainer/Viewport/Gun Camera/Gun Hook" method="_on_animation_finished"]
[connection signal="animation_started" from="Head/Camera/ViewportContainer/Viewport/Gun Camera/AnimationPlayer" to="Head/Camera/ViewportContainer/Viewport/Gun Camera/Gun Hook" method="_on_animation_started"]
[connection signal="body_entered" from="Head/InteractRay" to="Head/InteractRay" method="_on_body_entered"]
[connection signal="body_exited" from="Head/InteractRay" to="Head/InteractRay" method="_on_body_exited"]
[connection signal="interact_data" from="Head/InteractRay" to="Head/Camera/ViewportContainer/Viewport/Gun Camera/Gun Hook" method="_on_interact_data"]
[connection signal="pickup_data" from="Head/InteractRay" to="Inventory" method="_on_interact_data"]
[connection signal="picked_up" from="Head/PropRay" to="Head/Camera/ViewportContainer/Viewport/Gun Camera/Gun Hook" method="_on_grabbed_rb_pickup"]
[connection signal="picked_up" from="Head/PropRay" to="Head/InteractRay" method="_on_prop_picked_up"]
[connection signal="released" from="Head/PropRay" to="Head/Camera/ViewportContainer/Viewport/Gun Camera/Gun Hook" method="_on_released_rb_pickup"]
[connection signal="released" from="Head/PropRay" to="Head/InteractRay" method="_on_prop_released"]
[connection signal="killed" from="Hitbox" to="." method="_on_killed"]
[connection signal="body_entered" from="OthersDetection" to="." method="_on_other_detected"]
[connection signal="body_exited" from="OthersDetection" to="." method="_on_other_lost"]
